[metadata]
name = effmass
description = An effective mass package
long_description = file: README.md
long_description_content_type = text/markdown
author = Lucy Whalley
author_email = l.whalley@northumbria.ac.uk
url = https://github.com/lucydot/effmass
project_urls =
    Bug Tracker = https://github.com/lucydot/effmass/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive
python_requires = >=3.6
install_requires =
    vasppy >=0.5.0.
    scipy
    numpy
    matplotlib
    adjustText
    ase >=3.21.1
    octopuspy >=1.0.2
    questionary >=1.9.0
    prettytable >=2.1.0
    importlib_metadata; python_version<"3.8"
packages = effmass
scripts =

[options.extras_require]
docs =
    sphinx >=3.2.1
    sphinx_rtd_theme >=0.5.0
tests =
    pytest
    pytest-lazy-fixture
    codeclimate-test-reporter
    coverage ==4.3.4
dev =
    black
    build

[options.entry_points]
console_scripts =
    effmass = effmass.cli:cli
